--- a/Memo/Base.lproj/Main.storyboard
+++ b/Memo/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Root View Controller-->
+        <!--MEMO-->
         <scene sceneID="FgD-4O-rGf">
             <objects>
                 <tableViewController id="hRV-WD-Qac" sceneMemberID="viewController">
@@ -31,7 +31,9 @@
                             <outlet property="delegate" destination="hRV-WD-Qac" id="4Of-AI-Mmi"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="9QW-2R-vBy"/>
+                    <navigationItem key="navigationItem" title="MEMO" id="9QW-2R-vBy">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="uAR-vj-imZ"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k9b-CT-3kL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -41,8 +43,8 @@
         <scene sceneID="T64-rh-KKN">
             <objects>
                 <navigationController id="WeU-xx-quq" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="CC5-CJ-4RD">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" largeTitles="YES" id="CC5-CJ-4RD">
+                        <rect key="frame" x="0.0" y="44" width="414" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
