--- a/Memo/Base.lproj/Main.storyboard
+++ b/Memo/Base.lproj/Main.storyboard
@@ -11,7 +11,7 @@
         <!--MEMO-->
         <scene sceneID="FgD-4O-rGf">
             <objects>
-                <tableViewController id="hRV-WD-Qac" sceneMemberID="viewController">
+                <tableViewController id="hRV-WD-Qac" customClass="MemoListTableViewController" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="ODE-aK-vsR">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
