--- a/Memo/Base.lproj/Main.storyboard
+++ b/Memo/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -48,12 +49,32 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="MEMO" id="9QW-2R-vBy">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="uAR-vj-imZ"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="uAR-vj-imZ">
+                            <connections>
+                                <segue destination="aBF-fe-uU1" kind="presentation" id="3wB-SN-W7L"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="k9b-CT-3kL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="229" y="159"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="a5S-up-epa">
+            <objects>
+                <viewController id="Erb-Rl-ce2" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5YU-Oe-W6B">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="OJF-ZP-LmL"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="M6y-7V-QuS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eX4-7O-Hg4" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1606" y="-508"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="T64-rh-KKN">
@@ -70,6 +91,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U3b-us-NPg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-467" y="159"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="B7s-Al-cEW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aBF-fe-uU1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="suv-Wf-06s">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Erb-Rl-ce2" kind="relationship" relationship="rootViewController" id="SVQ-uh-1I5"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Coc-vB-ol9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="896" y="-508"/>
         </scene>
     </scenes>
     <resources>
