[UPDATE] Add Data Source

--- a/Memo/Base.lproj/Main.storyboard
+++ b/Memo/Base.lproj/Main.storyboard
@@ -116,6 +116,9 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="aSQ-s7-yGf" id="EeM-33-h0o"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aeC-Xb-KBw"/>
