--- a/Memo/Base.lproj/Main.storyboard
+++ b/Memo/Base.lproj/Main.storyboard
@@ -76,7 +76,7 @@
                                 <items>
                                     <barButtonItem systemItem="compose" id="5WR-gV-6Ed">
                                         <connections>
-                                            <segue destination="aBF-fe-uU1" kind="presentation" id="jbM-Za-Ln0"/>
+                                            <segue destination="aBF-fe-uU1" kind="presentation" modalPresentationStyle="fullScreen" id="jbM-Za-Ln0"/>
                                         </connections>
                                     </barButtonItem>
                                 </items>
@@ -138,6 +138,9 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Detail" id="kc6-FM-Wgr"/>
+                    <connections>
+                        <outlet property="memoTableView" destination="Izb-1B-QpB" id="ZpG-nj-Kzv"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5Pj-wu-dK8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -148,11 +151,11 @@
             <objects>
                 <viewController id="Erb-Rl-ce2" customClass="ComposeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5YU-Oe-W6B">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="IDO-gy-WyQ">
-                                <rect key="frame" x="0.0" y="56" width="414" height="786"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <mutableString key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</mutableString>
                                 <color key="textColor" systemColor="labelColor"/>
@@ -211,7 +214,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aBF-fe-uU1" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="suv-Wf-06s">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="56"/>
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
